# CalorIA

./: .editorconfig  .env.example  .env.production.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Caddyfile  Caddyfile.backend  Makefile  Prompt.md  README.md  Refactor.md  Roadmap.md  SECURITY.md  docker-compose.backend.yml  docker-compose.dev.yml  docker-compose.yml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
backend/: Dockerfile  Dockerfile.dev  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260224_505ed23f9c33_schema_inicial.py  20260305_a1b2c3d4e5f6_novos_campos_e_categorias.py  20260305_b2c3d4e5f6a1_corrige_case_enums.py  20260305_d4e5f6a1b2c3_taco_foods.py  20260306_e5f6a1b2c3d4_adiciona_dessert_mealtype.py  20260309_f1a2b3c4d5e6_taco_pgtrgm_source.py  20260315_a1b2c3d4e5f6_web_push_notifications.py  20260318_c4d5e6f7a8b9_foods_refactor.py  20260318_d5e6f7a8b9c0_meal_items_food_ref.py  20260320_e6f7a8b9c0d1_fix_search_text_taco.py
backend/app/: main.py
backend/app/api/v1/: __init__.py  ai.py  auth.py  dashboard.py  hydration.py  meals.py  mood.py  push.py  reminders.py  telegram.py  users.py  weight.py  whatsapp.py
backend/app/bots/telegram/: bot.py  run_polling.py  utils.py
backend/app/bots/telegram/handlers/: commands.py  logs.py  registration.py  reports.py
backend/app/bots/whatsapp/: handlers.py  sender.py  webhook.py
backend/app/core/: config.py  database.py  deps.py  security.py
backend/app/models/: __init__.py  ai_conversation.py  food.py  hydration_log.py  meal.py  meal_item.py  mood_log.py  notification.py  profile.py  push_subscription.py  reminder.py  taco_food.py  user.py  weight_log.py
backend/app/schemas/: __init__.py  ai.py  dashboard.py  logs.py  meal.py  profile.py  reminder.py  user.py
backend/app/services/: auth_service.py  dashboard_service.py  log_service.py  meal_service.py  profile_service.py  push_service.py  reminder_service.py  telegram_service.py  user_service.py  whatsapp_service.py
backend/app/services/ai/: ai_client.py  context_builder.py  food_lookup.py  gemini_client.py  insights_generator.py  meal_parser.py  pattern_analyzer.py  taco_lookup.py  utils.py  vision_parser.py
backend/app/services/nutrition/: tdee.py
backend/app/workers/: celery_app.py
backend/app/workers/tasks/: maintenance.py  reminders.py  reports.py
backend/scripts/: README.md  enrich_foods.py  extract_off_brazil.py  import_fatsecret.py  import_off.py  import_off_local.py  import_tbca.py  import_usda.py  normalize_foods.py  seed_all.py  seed_dev_user.py  seed_taco.py  translate_foods.py
backend/tests/: conftest.py  smoke_test.py
backend/tests/integration/: test_auth.py  test_dashboard.py  test_logs.py  test_meals.py  test_users.py
backend/tests/unit/: conftest.py  test_celery_tasks.py  test_meal_parser.py  test_security.py  test_tdee.py  test_vision_parser.py
data/: README.md  foods_dump.dump  foods_unified.csv
docs/: architecture.md  deploy-checklist.md  (+5 more)
(+193 files in other folders)
