[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "caloria-backend"
version = "0.1.0"
description = "Backend da CalorIA — diário alimentar inteligente"
requires-python = ">=3.12"
dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.12",
    # Banco de dados
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    # Validação
    "pydantic[email]>=2.9.0",
    "pydantic-settings>=2.6.0",
    # Autenticação
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    # Filas e cache
    "celery[redis]>=5.4.0",
    "redis>=5.2.0",
    # HTTP client
    "httpx>=0.27.0",
    # IA — Google Gemini
    "google-genai>=1.0.0",
    # Web Push
    "pywebpush>=2.0.0",
    # Imagens
    "pillow>=11.0.0",
    # Busca fuzzy para lookup TACO
    "rapidfuzz>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.27.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "types-passlib>=1.7.7",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

# =============================================================================
# Ruff — linting e formatação
# =============================================================================
[tool.ruff]
target-version = "py312"
line-length = 88
extend-exclude = ["alembic/"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "B", "UP"]
ignore = [
    "E501",   # line too long (formatação fica com o ruff format)
    "B008",   # function call in argument defaults — padrão FastAPI (Depends, Query, Body)
]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.ruff.lint.per-file-ignores]
"alembic/*" = ["UP035", "UP007", "I001"]  # arquivos gerados pelo alembic

# =============================================================================
# Mypy — type checking
# =============================================================================
[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
# Bots usam libs externas com tipagem incompleta (python-telegram-bot, httpx)
module = ["app.bots.*"]
disallow_untyped_defs = false
disable_error_code = ["no-any-return", "attr-defined", "arg-type", "unused-ignore"]

[[tool.mypy.overrides]]
# Scripts utilitários não fazem parte do código de produção
module = ["scripts.*"]
ignore_errors = true

# =============================================================================
# Pytest
# =============================================================================
[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
testpaths = ["tests"]

[tool.coverage.run]
source = ["app"]
omit = ["*/tests/*", "*/alembic/*"]
